# skey2.0

./: README
skey/: AUTHORS  ChangeLog  Makefile  Makefile.am  NEWS  config.h  configure  configure.ac
skey/include/: Makefile.am  debug.h  md4.h  skey.h  sysv_shadow.h
skey/lib/: Makefile.am  debug.c  md4.c  put.c  skeylogin.c  skeysubr.c
skey/man/: Makefile.am  Makefile.in  key.1  keyinit.1  keysh.1  skey.1
skey/misc/: README.ftpd  README.login  ftpd.c
skey/misc/login/lib/: Makefile  stream_pty.c  utmpx_init.c  utmpx_login.c  utmpx_logout.c
skey/misc/login/login/: Makefile  README  login.access  login.c  login_access.c  login_fbtab.c  sysv_default.c  sysv_default.h  sysv_environ.c  sysv_shadow.c  try.c
skey/misc/su/: Makefile  NOTE  su.c
skey/scripts/: Makefile.am  test.sh
skey/src/: INSTALL  Makefile  Makefile.am  Makefile.am~  Makefile.in  Makefile.tmpl  config-skey.sh  config.h  config.h.in  config.h.in~  configure.scan  skey.c  skeyinit.c  skeysh.c  tmpmk
skey/tools/: keyaudit  keyinfo
